welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:3: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var T : Array[Int] 
      ^golomb:3: error: local variables must be initialized
  var T : Array[Int] 
      ^golomb:4: error: type mismatch;
 found   : Unit
 required: Int
  for (i <- 0 to num -1)
         ^